# sopel-stocks

./: .travis.yml  MANIFEST.in  NEWS  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml  python-tests.yml
sopel_modules/stocks/: __init__.py  stocks.py
sopel_modules/stocks/providers/: alphavantage.py  finnhub.py  iexcloud.py  yahoo.py
sopel_stocks/: plugin.py
sopel_stocks/providers/: alphavantage.py  finnhub.py  iexcloud.py
